--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
   "description": "Tiny, fast jQuery plugin to search through elements as you type.",
   "main": [
     "dist/jquery.searchable-1.1.0.min.js",
-    "jquery.searchable.js"
+    "dist/jquery.searchable-ie-1.1.0.min.js",
+    "jquery.searchable.js",
+    "jquery.searchable-ie.js",
   ],
   "keywords": [
     "jquery",
