--- a/bower.json
+++ b/bower.json
@@ -9,8 +9,7 @@
   "main": [
     "dist/jquery.searchable-1.1.0.min.js",
     "dist/jquery.searchable-ie-1.1.0.min.js",
-    "jquery.searchable.js",
-    "jquery.searchable-ie.js"
+    "jquery.searchable.js"
   ],
   "keywords": [
     "jquery",
