--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "url": "http://twitter.com/stidges"
   },
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "jquery": ">= 1.9.0"
+  },
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-jscs-checker": "~0.3.2"
+    "eslint": "^3.10.2",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^2.0.0"
   }
 }
