--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,29 @@
 {
     "root": true,
-    "extends": "airbnb-base/legacy",
     "env": {
+        "es6": true,
         "browser": true,
         "jquery": true
+    },
+    "rules": {
+        "indent": ["error", 4],
+        "quotes": ["error", "single"],
+        "no-const-assign": "error",
+        "no-var": "error",
+        "prefer-const": "error",
+        "no-multi-spaces": "error",
+        "prefer-arrow-callback": ["error", { "allowUnboundThis": false }],
+        "arrow-parens": ["error", "always"],
+        "arrow-spacing": ["error", { "before": true, "after": true }],
+        "space-in-parens": ["error", "never"],
+        "curly": ["error", "all"],
+        "eqeqeq": ["error", "always", { "null": "ignore" }],
+        "brace-style": ["error", "1tbs"],
+        "array-bracket-spacing": ["error", "never"],
+        "computed-property-spacing": ["error", "never"],
+        "comma-spacing": ["error", { "before": false, "after": true }],
+        "no-useless-concat": "error",
+        "prefer-template": "error",
+        "object-shorthand": ["error", "always"]
     }
 }
