Add initial test suite

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^3.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^2.0.0"
+    "gulp-uglify": "^2.0.0",
+    "qunitjs": "^1.23.1"
   }
 }
