--- a/package.json
+++ b/package.json
@@ -24,10 +24,9 @@
     "jquery": ">= 1.9.0"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.18.0",
     "eslint": "^3.10.2",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
+    "gulp-buble": "^0.8.0",
     "gulp-eslint": "^3.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0",
